# local-rag

./: .env.template  .gitignore  README.md  pyproject.toml
src/: config.py
src/frontend/: app.py
src/pipelines/: download_models.py  ingest_documents.py  test_questions.py
src/services/: document_processor.py  llm_service.py  rag_workflow.py  vector_store.py
